--- a/public/assets/bootstrap/css/bootstrap.css
+++ b/public/assets/bootstrap/css/bootstrap.css
@@ -2921,6 +2921,23 @@ textarea.form-control-lg {
   --bs-btn-disabled-border-color: #198754;
 }
 
+.btn-pink {
+    --bs-btn-color: #fff;
+    --bs-btn-bg: #fd6fa0;
+    --bs-btn-border-color: #fd6fa0;
+    --bs-btn-hover-color: #fff;
+    --bs-btn-hover-bg: #fa377a;
+    --bs-btn-hover-border-color: #fa377a;
+    --bs-btn-focus-shadow-rgb: 60, 153, 110;
+    --bs-btn-active-color: #fff;
+    --bs-btn-active-bg: #fa377a;
+    --bs-btn-active-border-color: #fa377a;
+    --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+    --bs-btn-disabled-color: #fff;
+    --bs-btn-disabled-bg: #fd6fa0;
+    --bs-btn-disabled-border-color: #fd6fa0;
+}
+
 .btn-info {
   --bs-btn-color: #000;
   --bs-btn-bg: #0dcaf0;
@@ -4733,6 +4750,14 @@ textarea.form-control-lg {
 }
 .alert-danger .alert-link {
   color: #6a1a21;
+}
+.alert-pink {
+  --bs-alert-color: #bd013f;
+  --bs-alert-bg: #f6d1de;
+  --bs-alert-border-color: #fd6fa0;
+}
+.alert-pink .alert-link {
+  color: #bd013f;
 }
 
 .alert-light {
