--- a/public/css/exercise.css
+++ b/public/css/exercise.css
@@ -69,6 +69,9 @@
     font-size: 30px;
 }
 .exercise-card-content{
+    position: relative;
+    grid-column: 2/ 4;
+    grid-row: 1 / 3;
     top: 10%;
     justify-content: center;
 }
@@ -81,7 +84,6 @@
     width: 500px;
     height: 600px;
     border-radius: 15px;
-
     overflow: hidden;
 }
 
