--- a/public/css/exercise.css
+++ b/public/css/exercise.css
@@ -1,19 +1,11 @@
-
-
-.background{
-    background: linear-gradient(#850032, #FFA69E) ;
-}
-
 .exercise-card{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 10px;
     grid-auto-rows: minmax(100px, auto);
     position : relative;
-    background-color: #fafafa;
     margin: 0 50px 0 50px;
     padding: 10px;
-    height:150vh;
     justify-content: center;
 }
 
@@ -24,20 +16,23 @@
     top: 10px;
 }
 
-.cate-card-content{
-    grid-column: 2/ 4;
-    grid-row: 2 / 3;
-    justify-content: center;
-    width: 100%;
-    max-width: 400px;
-    right: 50%;
-    left: 15%;
+@media only screen and (max-width: 300px) {
 
-
+    .cate-card-content {
+        grid-column: 1/ -1;
+        grid-row: 1 / -1;
+        justify-content: center;
+        width: 100%;
+        max-width: 400px;
+        right: 50%;
+        left: 15%;
+        position: absolute;
+    }
 }
 
+
 .slide-cate-img{
-    position: relative;
+    position: absolute;
     height: 200px;
     border-radius: 15px;
     background-repeat: no-repeat;
@@ -51,6 +46,7 @@
     font-size: 100%;
     color: #fff;
     height: auto;
+    position: absolute;
 }
 
 
@@ -69,7 +65,7 @@
     font-size: 30px;
 }
 .exercise-card-content{
-    position: relative;
+    position: absolute;
     grid-column: 2/ 4;
     grid-row: 1 / 3;
     top: 10%;
@@ -85,6 +81,7 @@
     height: 600px;
     border-radius: 15px;
     overflow: hidden;
+    background: #ffd6ef;
 }
 
 #slider ul {
@@ -100,7 +97,7 @@
 #slider ul li {
     position: relative;
     height: 100%;
-
+    transform: scale(1);
     float: left;
 }
 
@@ -109,13 +106,17 @@
     text-align: center;
 }
 
+.slide-title{
+    margin: 15px;
+}
+
 #slider ul li img{
     width: 500px;
     height: 400px;
 }
 
 #countdown {
-    position: relative;
+    position: absolute;
     margin: auto;
     margin-top: 2px;
     height: 40px;
@@ -129,6 +130,31 @@
     color: #fa9dcb;
     display: inline-block;
     line-height: 40px;
+}
+
+#countdown.countdown-wrap {
+    position: absolute;
+    bottom: 10px; /* or any other value */
+    left: 50%; /* or any other value */
+    transform: translateX(-50%); /* to center the countdown-wrap div horizontally */
+}
+
+#countdown-number {
+    position: absolute;
+    bottom: 0; /* or any other value */
+    left: 50%; /* or any other value */
+    transform: translateX(-50%); /* to center the countdown-number div horizontally */
+}
+
+
+@media (max-width: 600px) {
+    #countdown.countdown-wrap {
+        bottom: 5px; /* adjust bottom value for smaller screens */
+    }
+
+    #countdown-number {
+        font-size: 0.8em; /* adjust font-size for smaller screens */
+    }
 }
 
 svg {
