--- a/public/css/style.css
+++ b/public/css/style.css
@@ -251,8 +251,8 @@ section {
 
 .main-navi ul li a:link span,
 .main-navi ul li a:visited span {
-    color: #2196F3;
-    font-size: 70%;
+    color: #a0a4a9;
+    font-weight: 200;
     text-transform: uppercase;
     border-bottom: 2px solid transparent;
     -webkit-transition: .3s;
