--- a/public/css/templatemo-training-studio.css
+++ b/public/css/templatemo-training-studio.css
@@ -330,13 +330,13 @@ header
 
 .header-area .main-nav .nav li:hover a,
 .header-area .main-nav .nav li a.active {
-  color: #dc3545!important;
+  color: #fdfdfd !important;
   opacity: 1;
 }
 
 .background-header .main-nav .nav li:hover a,
 .background-header .main-nav .nav li a.active {
-  color: #dc3545!important;
+  color: #ffffff !important;
   opacity: 1;
 }
 
